# ParaTos

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  byteorder.h  common.h  memory.c  memory.i  paratos.c  sysvars.h  tos_errors.c  tos_errors.h
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  paratos
_codeql_build_dir/gemdos/: Makefile  cmake_install.cmake
_codeql_build_dir/mushashi/: Makefile  cmake_install.cmake  m68kmake  m68kops.c
gemdos/: CMakeLists.txt  cdev.c  cookiejar.c  cookiejar.h  date.c  dir.c  file.c  gdos.h  gdos_dispatch.c  gemdos.h  gemdos_dispatch.c  loader.c  loader.h  mem.c  net.c  path.c  path.h  pexec.c  proc.c  signals.c  sys.c
mushashi/: CMakeLists.txt  m68k.h  m68k_in.c  m68kconf.h  m68kcpu.c  m68kcpu.h  m68kmake.c
test_programs/: Makefile  README.md  echo_args.c  exit_code.c  hello.c  run_syscalls.sh
test_programs/syscalls/: README.md  cconout.c  cconws.c  dclosedir.c  dcreate.c  ddelete.c  dgetcwd.c  dopendir.c  dreaddir.c  drewinddir.c  dsetpath.c  fattrib.c  fclose.c  fcntl.c  fcreate.c  fdelete.c  fdup.c  ffstat64.c  flink.c  fopen.c  fpipe.c  fpoll.c  fread.c  freadlink.c  frename.c  fseek.c  fselect.c  fstat64.c  fsymlink.c  fwrite.c  pfork_waitpid.c  pgetgid.c  pgetpgrp.c  pgetpid.c  pgetppid.c  pgetuid.c  psigblock.c  psigpending.c  psigsetmask.c  pumask.c  (+3 more)
